<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kinect.pro.meetingapp.activity.ProfileDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDodgerblue"
        android:text="@string/profile_details"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size_30"
        android:layout_marginTop="@dimen/size_20"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/avatar"
            android:layout_marginStart="@dimen/size_30"
            android:layout_marginTop="@dimen/size_50"/>

        <EditText
            android:id="@+id/textName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_50"
            android:layout_marginStart="@dimen/size_10"
            android:theme="@style/MyEditTextTheme"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_50"
        android:layout_margin="@dimen/size_20">

        <RadioButton
            android:id="@+id/radioButtonBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:text="@string/business" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:entries="@array/spinnerList" />

        <RadioButton
            android:id="@+id/radioButtonPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privateRadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/size_15"
        android:layout_marginTop="@dimen/size_120"/>


</LinearLayout>
