<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kinect.pro.meetingapp.activity.InfoMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_25"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorDodgerblue"
            android:textSize="@dimen/text_size_40" />

        <TextView
            android:id="@+id/tvMeetingTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/tvParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_20"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tvStartMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tvStopMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tvLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/size_10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/confirmed"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnCanceled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/canceled"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

